--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "lib",
     "index.js"
   ],
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "main": "index.js",
   "keywords": [
     "gettext",
