--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: node_js
 node_js:
-  - node
-  - 9
-  - 8
-  - 6
-after_script: 'cat ./coverage/lcov.info | coveralls'
+    - node
+    - 10
+    - 8
+after_script: "cat ./coverage/lcov.info | coveralls"
